--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,18 +12,19 @@ jobs:
     env:
       DIND_HOST: unix:///tmp/docker.sock
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v3
         with:
           node-version: 16.18.0
 
       - run: npm install -g npm@^8
 
       - name: Set up JDK 11 for Java testing
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: 11
+          distribution: adopt-hotspot
 
       - run: npm ci
         env:
@@ -67,13 +68,13 @@ jobs:
 
       - run: DOCKER_HOST=$DIND_HOST xvfb-run npm run test:release
 
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v3
         with:
           name: distributables
           path: build/dist/*
           if-no-files-found: error
 
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v3
         with:
           name: test-scripts
           path: test/distributables-test
@@ -110,13 +111,13 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - name: Get our distributables
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v3
         with:
           name: distributables
           path: distributables
 
       - name: Get the test scripts
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v3
         with:
           name: test-scripts
           path: .
